--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
         "Save restricted content",
         "bot"
     ],
-    "repository": "https://github.com/vasusen-code/SaveRestrictedContentBot",
+    "repository": "https://github.com/Destra1112/bottumbnail",
     "website": "",
     "success_url": "https://t.me/DroneBots",
     "env": {
@@ -40,6 +40,14 @@
         {
             "url": "heroku/python"
         },
+],
+  "formation": {
+    "worker": {
+      "quantity": 1,
+      "size": "eco"
+    }
+  }
+}
         {
             "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
         }
