--- a/app.json
+++ b/app.json
@@ -45,7 +45,7 @@
         }
      ],
     "formation": {
-      "ayiin": {
+      "worker": {
         "quantity": 1,
         "size": "eco"
       }
